<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="org.d3if2107.splitbill.ui.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_mainFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="org.d3if2107.splitbill.ui.histori.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history"/>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if2107.splitbill.ui.about.AboutFragment"
        android:label="@string/about_app" />
</navigation>